--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dev Portfolio</title>
+    <title>Practice</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <main>
+        <div class="skill">
+            <img class="image" src="assets/card-icon.png" alt="">
+            <h4 class="skill-tittle">Digital Transformation</h4>
+            <p class="skill-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+            <button class="learn">Learn More</button>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
