banner section done

--- a/index.html
+++ b/index.html
@@ -3,19 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice</title>
+    <title>Developer Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/b7903cb9e0.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-
+        <nav>
+            <h1>Ma<span>r</span>y</h1>
+            <div>
+                <ul>
+                    <li>Portfolio</li>
+                    <li>Blog</li>
+                    <li><button class="common-btn">Hire Me</button></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="banner">
+            <div class="banner-info">
+                <h2 class="info-hi">Hi, I am</h2>
+                <h1>Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <div class="btn-group">
+                    <button class="common-btn"><i class="fa-solid fa-download"></i> Download CV</button>
+                    <button class="common-btn common-btn-phone"><i class="fa-solid fa-phone"></i> Contact</button>
+                </div>
+            </div>
+            <div class="banner-img">
+                <img src="images/hardy.png" alt="">
+            </div>
+        </div>
     </header>
     <main>
-        <div class="skill">
-            <img class="image" src="assets/card-icon.png" alt="">
-            <h4 class="skill-tittle">Digital Transformation</h4>
-            <p class="skill-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
-            <button class="learn">Learn More</button>
+
     </main>
     <footer>
 
