--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/b7903cb9e0.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header>
         <nav>
@@ -23,7 +25,8 @@
             <div class="banner-info">
                 <h2 class="info-hi">Hi, I am</h2>
                 <h1>Mary Hardy</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved moments.</p>
                 <div class="btn-group">
                     <button class="common-btn"><i class="fa-solid fa-download"></i> Download CV</button>
                     <button class="common-btn common-btn-phone"><i class="fa-solid fa-phone"></i> Contact</button>
@@ -35,10 +38,68 @@
         </div>
     </header>
     <main>
-
+        <section class="about-me">
+            <div class="about-me-bg">
+                <div class="info-border">
+                    <h1>About Me</h1>
+                    <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and
+                        slick
+                        websites that provide real value to the end user. Thousands of clients have procured exceptional
+                        resulfs while working with me. Delivering work within time and budget which meets clients
+                        requirements in our mata.</p>
+                    <div class="about-cart">
+                        <div>
+                            <span>Name:</span>
+                            <h3>Mary Hardy</h3>
+                        </div>
+                        <div>
+                            <span>Email:</span>
+                            <h3>info@gmail.com</h3>
+                        </div>
+                        <div>
+                            <span>Date of Birth:</span>
+                            <h3>11 November 1987</h3>
+                        </div>
+                        <div>
+                            <span>From</span>
+                            <h3>Los Angeles, USA</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="what-i-do">
+            <div class="what-i-do-info">
+                <h1>What I do</h1>
+                <p class="description-color">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            </div>
+            <div class="what-i-do-cart-container">
+                <div>
+                    <img src="images/icons/js.png" alt="">
+                    <h2>Vanila JavaScript</h2>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div>
+                    <img src="images/icons/react.png" alt="">
+                    <h2>React</h2>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div>
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h2>Node.js</h2>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div>
+                    <img src="images/icons/mongo.png" alt="">
+                    <h2>MongoDB</h2>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
