--- a/index.html
+++ b/index.html
@@ -71,28 +71,85 @@
         <section class="what-i-do">
             <div class="what-i-do-info">
                 <h1>What I do</h1>
-                <p class="description-color">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+                <p class="description-color">I have more than 10 years experience building software for clients all over
+                    the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to
+                    find out more about my experience? Check out my online resume and project portfolio.</p>
             </div>
             <div class="what-i-do-cart-container">
                 <div>
                     <img src="images/icons/js.png" alt="">
                     <h2>Vanila JavaScript</h2>
-                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                        free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div>
                     <img src="images/icons/react.png" alt="">
                     <h2>React</h2>
-                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                        free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div>
                     <img src="images/icons/nodejs.png" alt="">
                     <h2>Node.js</h2>
-                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                        free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div>
                     <img src="images/icons/mongo.png" alt="">
                     <h2>MongoDB</h2>
-                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                        free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+        <section class="resume-summary-container">
+            <h1>A summary of My Resume</h1>
+            <div class="resume-summary">
+                <div class="education">
+                    <h1>My Education</h1>
+                    <div>
+                        <h1>Master in Computer Engineering</h1>
+                        <h3>Harvard University / 2015 - 2017</h3>
+                        <p>List skill/technologies here. you can change the icon avobe to any of the 1500% FontAwesome 5
+                            free icons Available. Aenean commondo ligula eget dolr.</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h1>Master in Computer Engineering</h1>
+                        <h3>Harvard University / 2015 - 2017</h3>
+                        <p>List skill/technologies here. you can change the icon avobe to any of the 1500% FontAwesome 5
+                            free icons Available. Aenean commondo ligula eget dolr.</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h1>Master in Computer Engineering</h1>
+                        <h3>Harvard University / 2015 - 2017</h3>
+                        <p>List skill/technologies here. you can change the icon avobe to any of the 1500% FontAwesome 5
+                            free icons Available. Aenean commondo ligula eget dolr.</p>
+                    </div>
+                </div>
+                <div class="experience">
+                    <h1>My Experience</h1>
+                    <div>
+                        <h1>Sr. Font End Developer</h1>
+                        <h3>Apple Inc / 2020 - Current</h3>
+                        <p>List skill/technologies here. you can change the icon avobe to any of the 1500% FontAwesome 5
+                            free icons Available. Aenean commondo ligula eget dolr.</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h1>Sr. Font End Developer</h1>
+                        <h3>Apple Inc / 2020 - Current</h3>
+                        <p>List skill/technologies here. you can change the icon avobe to any of the 1500% FontAwesome 5
+                            free icons Available. Aenean commondo ligula eget dolr.</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h1>Sr. Font End Developer</h1>
+                        <h3>Apple Inc / 2020 - Current</h3>
+                        <p>List skill/technologies here. you can change the icon avobe to any of the 1500% FontAwesome 5
+                            free icons Available. Aenean commondo ligula eget dolr.</p>
+                    </div>
                 </div>
             </div>
         </section>
