dev portfolio done

--- a/index.html
+++ b/index.html
@@ -152,10 +152,31 @@
                     </div>
                 </div>
             </div>
+            <div class="btn-container">
+                <button class="common-btn"><i class="fa-solid fa-download"></i> Download CV</button>
+            </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="lets-connect">
+        <div>
+            <h1>Let's Connect</h1>
+            <p class="description-color">Please fill out the form on this section to contact with me or call between
+                9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="footer-icon-container">
+                <img src="images/icons/facebook.png" alt="">
+                <img src="images/icons/twitter.png" alt="">
+                <img src="images/icons/insta.png" alt="">
+            </div>
+        </div>
+        <div>
+            <div class="footer-form">
+                <h1>Let's Message me</h1>
+                <input type="text" placeholder="Your Name">
+                <input type="email" placeholder="Your Email">
+                <textarea rows="10" cols="40" name="" id="" placeholder="Your Message"></textarea>
+            </div>
+            <input type="submit" class="common-btn" value="Submit">
+        </div>
     </footer>
 </body>
 
